--- a/index.html
+++ b/index.html
@@ -243,7 +243,12 @@
         </div>
         <div class="contact section" id="contact">
           <h1 class="topic">Contact</h1>
-          <form class="contact-form" name="contact">
+          <form
+            class="contact-form"
+            name="contact"
+            data-netlify="true"
+            netlify-honeypot="bot-field"
+          >
             <div class="contact-top">
               <div class="field">
                 <input name="bot-field" style="display: none" />
