--- a/index.html
+++ b/index.html
@@ -39,27 +39,24 @@
       <div class="content">
         <div class="home-wrapper">
           <div class="home" id="home">
-            <div class="intro">Hi, Iam karthikraguram</div>
+            <div class="intro">Hi, Iam karthikraguram.</div>
           </div>
         </div>
         <div class="about section" id="about">
           <h2 class="topic">About</h2>
           <div class="about-content">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-              dolores fugit saepe aliquam ad hic impedit ipsam adipisci, cumque
-              labore rem nostrum itaque fugiat? Dolor iste excepturi alias harum
-              dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Omnis dolores fugit saepe aliquam ad hic impedit ipsam
-              adipisci, cumque labore rem nostrum itaque fugiat? Dolor iste
-              excepturi alias harum dignissimos. Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Omnis dolores fugit saepe aliquam ad
-              hic impedit ipsam adipisci, cumque labore rem nostrum itaque
-              fugiat? Dolor iste excepturi alias harum dignissimos.Lorem ipsum
-              dolor sit amet consectetur adipisicing elit. Omnis dolores fugit
-              saepe aliquam ad hic impedit ipsam adipisci, cumque labore rem
-              nostrum itaque fugiat? Dolor iste excepturi alias harum
-              dignissimos.
+              Hi, I'm <b>Karthikraguram</b>, currently pursuing my B.E. degree
+              in <b>PSG College of Technology</b>. While studying in the
+              mechanical allied department, I discovered my passion for coding
+              during the <b>Corona Quarantine</b>. I explored various fields
+              like game development, machine learning, and web development.
+              After trying them all, I realized that web development is the
+              perfect fit for me. I have created several
+              <a class="link" href="#projects">Projects</a> along the way, which
+              are showcased below. Your feedback and suggestions for design
+              modifications or improvements are greatly appreciated. Please feel
+              free to <a class="link" href="#contact">Contact me</a>.
             </p>
             <div>
               <div class="skill-container">
@@ -106,7 +103,7 @@
                   </a>
                 </div>
                 <p class="note">
-                  *Click the above platform to visit the profile
+                  *Click the above platform to visit my profile
                 </p>
               </div>
             </div>
@@ -181,19 +178,18 @@
           <div class="project-container">
             <div class="project">
               <div class="image">
-                <img src="project1.png" class="reference" />
+                <img src="portfolio.png" class="reference" />
               </div>
               <div class="project-content">
-                <h1 class="project-name">Recipe Book 1</h1>
+                <h1 class="project-name">Portfolio</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Quidem consequuntur veritatis porro adipisci. Aspernatur
-                  reiciendis repellendus non fugit harum magni temporibus
-                  asperiores alias hic dolorem? Necessitatibus officia vero
-                  facere omnis!
+                  I built a portfolio for my profile to make it easier to
+                  highlight the projects I've worked on and my web development
+                  expertise. It has a responsive design that can adjust to
+                  several platforms.
                 </p>
                 <a
-                  href="https://karthikraguram-recipebook.netlify.app"
+                  href="https://karthikraguram-portfolio.netlify.app"
                   target="_blank"
                   >Wanna see <i class="fa fa-arrow-right" aria-hidden="true"></i
                 ></a>
@@ -201,13 +197,14 @@
             </div>
             <div class="project">
               <div class="project-content">
-                <h1 class="project-name">Recipe Book 2</h1>
+                <h1 class="project-name">Recipe Book</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Quidem consequuntur veritatis porro adipisci. Aspernatur
-                  reiciendis repellendus non fugit harum magni temporibus
-                  asperiores alias hic dolorem? Necessitatibus officia vero
-                  facere omnis!
+                  Developed a recipe storing web application using Angular and
+                  Firebase. This application allows users to store and organize
+                  their favorite recipes. With the help of Firebase, users can
+                  securely save, update, and retrieve recipes, creating a
+                  convenient and efficient way to manage their culinary
+                  collection.
                 </p>
                 <a
                   href="https://karthikraguram-recipebook.netlify.app"
@@ -216,27 +213,48 @@
                 ></a>
               </div>
               <div class="image">
-                <img src="project1.png" class="reference" />
+                <img src="recipebook.png" class="reference" />
               </div>
             </div>
             <div class="project">
               <div class="image">
-                <img src="project1.png" class="reference" />
+                <img src="moviedetail.png" class="reference" />
               </div>
               <div class="project-content">
-                <h1 class="project-name">Recipe Book 3</h1>
+                <h1 class="project-name">Movie Details</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Quidem consequuntur veritatis porro adipisci. Aspernatur
-                  reiciendis repellendus non fugit harum magni temporibus
-                  asperiores alias hic dolorem? Necessitatibus officia vero
-                  facere omnis!
+                  Designed a web application that provides movie enthusiasts
+                  with comprehensive details about movies. By utilizing an API
+                  and entering a movie name, users can access relevant data such
+                  as plot summaries, cast information, ratings, and more,
+                  enhancing their movie-related experience
                 </p>
                 <a
-                  href="https://karthikraguram-recipebook.netlify.app"
+                  href="https://karthikraguram-moivedetail.netlify.app"
                   target="_blank"
                   >Wanna see <i class="fa fa-arrow-right" aria-hidden="true"></i
                 ></a>
+              </div>
+            </div>
+            <div class="project">
+              <div class="project-content">
+                <h1 class="project-name">N-Queens Problem</h1>
+                <p>
+                  I have created an responsive web application that solves the
+                  well known N-Queens problem. Using a recursive approach, the
+                  application efficiently computes the solution. The primary
+                  goal is to arrange N-Queens on an NxN chessboard without any
+                  queen being able to attack another, ensuring a conflict-free
+                  placement.
+                </p>
+                <a
+                  href="https://karthikraguram-nqueens.netlify.app"
+                  target="_blank"
+                  >Wanna see <i class="fa fa-arrow-right" aria-hidden="true"></i
+                ></a>
+              </div>
+              <div class="image">
+                <img src="nqueens.png" class="reference" />
               </div>
             </div>
           </div>
